Deploy/Prod/deployment_prod.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-sample-alpha-prod
  namespace: openshift-gitops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-sample-alpha-prod
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-sample-alpha-prod
        deployment: nginx-sample-alpha-prod
    spec:
      containers:
        - name: nginx-sample-alpha-prod
          image: >-
            image-registry.openshift-image-registry.svc:5000/openshift-gitops/nginx-sample@sha256:b1ea03751e6343b34b70852cbe8f7d81f25debabd82628fc28c62b3b75ec0b71
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          env: []
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  paused: false
